--- a/pages/home/index.css
+++ b/pages/home/index.css
@@ -1,1 +1,60 @@
 /* Desenvolva sua estilização aqui... */
+
+.header__container {
+    background-image: url(/assets/img/header-bg.svg);
+    height: 789px;
+    background-size: cover;
+    background-position: center;    
+    padding: 0 1rem;
+    display: flex;
+    /* gap: 3.75rem; */
+    align-items: center;
+}
+
+.header__container > nav {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 3.75rem;
+}
+
+
+.header__container > nav > img {
+    width: 193.31px;
+    height: 23.97px;
+
+}
+
+.header__container > nav > button {
+    font-size: var(--text-2);
+    background-color: var(--color-brand-1);
+    border: 0;
+    color: var(--color-grey-6);
+    border-radius: 8px;
+    padding: 0.75rem 3.125rem;
+    
+}
+
+.text__container {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.text__container > h3 {
+    color: var(--color-grey-3);
+    font-size: var(--title-3);
+    font-weight: 600;
+    line-height: 3rem;
+}
+
+.text__container > div > p, .text__container > p {
+    color: var(--color-grey-5);
+    font-size: var(--text-2);
+    font-weight: 400;
+    line-height: 2rem;
+}
+
+.text__container > p{
+    font-weight: 600;
+}
