--- a/pages/home/index.css
+++ b/pages/home/index.css
@@ -1,5 +1,4 @@
 /* Desenvolva sua estilização aqui... */
-
 .header__container {
     background-image: url(/assets/img/header-bg.svg);
     height: 789px;
@@ -16,6 +15,7 @@
     flex-direction: column;
     align-items: flex-start;
     gap: 3.75rem;
+    max-width: 1400px;
 }
 
 
@@ -138,7 +138,6 @@ div.tagButton__container > button {
     
 }
 
-
 button {
     cursor: pointer;
 }
@@ -187,4 +186,50 @@ li.selectedJob > button {
     border: 2px solid var(--color-grey-5);
     border-radius: 8px;
     
+}
+
+@media(min-width: 600px){
+
+    .header__container > nav {
+        padding: 0 2rem;
+    }
+    .text__container > h3 {
+        font-size: var(--title-1);
+    }
+
+    .text__container > div > p, .text__container > p {
+        font-size: var(--title-5);
+    }
+
+    div.tagButton__container {
+
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    main {
+        max-width: 560px;
+        margin: 0 auto;
+    }
+    
+}
+
+@media(min-width: 991px){
+    main {
+        padding: 0 2rem;
+        max-width: 1400px;
+        margin: 0 auto;
+        display: flex;
+        flex-direction: row;
+        align-items: flex-start;
+        gap: 4.875rem;
+    }
+
+    .section.jobs {
+        max-width: 550px;
+    }
+
+    .selectedJobs__container {
+        margin-top: 7.80rem ;
+    }
 }
