--- a/pages/home/index.css
+++ b/pages/home/index.css
@@ -30,7 +30,11 @@
     color: var(--color-grey-6);
     border-radius: 8px;
     padding: 0.75rem 3.125rem;
-    
+}
+
+.header__container > nav > button:hover {
+    background-color: var(--color-brand-2);
+    transition: .5s ease;
 }
 
 .text__container {
@@ -135,6 +139,11 @@ div.tagButton__container > button {
     font-size: var(--text-2);   
 }
 
+div.tagButton__container > button:hover {
+    background-color: var(--color-brand-2);
+    transition: .5s ease;
+}
+
 button {
     cursor: pointer;
 }
@@ -170,6 +179,10 @@ li.selectedJob {
     gap: 20px;
 }
 
+li.selectedJob:hover {
+    background-color: var(--color-grey-3);
+}
+
 li.selectedJob > h5 {
     width: 80%;
 }
@@ -182,7 +195,11 @@ li.selectedJob > button {
     background-color: var(--color-grey-5);
     border: 2px solid var(--color-grey-5);
     border-radius: 8px;
-    
+    transition: .5s ease;
+}
+
+li.selectedJob > button:hover {
+    background-color: var(--color-grey-3);
 }
 
 @media(min-width: 600px){
