--- a/pages/home/index.css
+++ b/pages/home/index.css
@@ -236,6 +236,7 @@ li.selectedJob > button:hover {
 @media(min-width: 991px){
     main {
         padding: 0 2rem;
+        width: 1300px;
         max-width: 1400px;
         margin: 0 auto;
         display: flex;
@@ -244,6 +245,11 @@ li.selectedJob > button:hover {
         gap: 4.875rem;
     }
 
+    .header__container > nav {
+        max-width: 1400px;
+        margin: 0 auto;
+        padding: 0px;
+    }
     .section.jobs {
         max-width: 550px;
     }
